// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Homepage rendered right 1`] = `
<div
  className="App"
>
  <div>
    <div
      className="NavBar"
    >
      <div
        className="title"
        onClick={[Function]}
      >
        this.jobs
      </div>
      <div
        className="SearchBar"
      >
        <div
          className="searchBarDisplay"
        >
          <input
            className="searchInput"
            id="searchInput"
            onChange={[Function]}
            onKeyPress={[Function]}
            placeholder="Search"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="iconsHolder"
      >
        <a
          className="linkDisplay home "
          href="/home"
          onClick={[Function]}
        >
          <div
            className="iconsDisplay"
          >
            <img
              alt="Home"
              className="iconsImages "
              src="house_white_1.png"
            />
            <p
              className="iconLabel "
            >
              Home
            </p>
          </div>
        </a>
        <a
          className="linkDisplay connections "
          href="/connections"
          onClick={[Function]}
        >
          <div
            className="iconsDisplay"
          >
            <img
              alt="Home"
              className="iconsImages"
              src="people_white_1.png"
            />
            <p
              className="iconLabel"
            >
              Connections
            </p>
          </div>
        </a>
        <a
          className="linkDisplay jobs"
          href="/jobs"
          onClick={[Function]}
        >
          <div
            className="iconsDisplay"
          >
            <img
              alt="Home"
              className="iconsImages"
              src="work_white_1.png"
            />
            <p
              className="iconLabel"
            >
              Jobs
            </p>
          </div>
        </a>
        <a
          className="linkDisplay settings"
          href="/settings/profile/null"
          onClick={[Function]}
        >
          <div
            className="iconsDisplay"
          >
            <img
              alt="Home"
              className="iconsImages"
              src="settings_white_1.png"
            />
            <p
              className="iconLabel"
            >
              Settings
            </p>
          </div>
        </a>
        <a
          className="linkDisplay logout"
          href="/"
          onClick={[Function]}
        >
          <div
            className="iconsDisplay"
          >
            <img
              alt="Home"
              className="iconsImages"
              src="logout_white_1.png"
            />
            <p
              className="iconLabel"
            >
              Logout
            </p>
          </div>
        </a>
      </div>
    </div>
  </div>
  <div
    className="PostBox container"
  >
    <div
      className="box "
    >
      <h1
        className="titleToHover"
      >
        Create a Post!
      </h1>
      <div>
        <input
          className="textBox"
          onChange={[Function]}
          placeholder="What's on your mind?"
          type="text"
        />
      </div>
      <div
        className="buttons25"
      >
        <div
          className="dropdown"
        >
          <select
            className="dropbtn"
            onChange={[Function]}
          >
            <option
              id="SelectTag"
              value="1"
            >
              Select Tag
            </option>
            <option
              id="JobRecruitment"
              value="Job-Recruitment"
            >
              Job-Recruitment
            </option>
            <option
              id="KnowledgeSharing"
              value="Knowledge Sharing"
            >
              Knowledge Sharing
            </option>
            <option
              id="Inspiration"
              value="Inspiration"
            >
              Inspiration
            </option>
            <option
              id="Others"
              value="Others"
            >
              Others
            </option>
          </select>
        </div>
        <button
          className="sc-bdvvtL hvLuUM"
          onClick={[Function]}
        >
          <img
            alt=""
            className="images"
            src="camera-outline.svg"
          />
        </button>
        <input
          accept="image/x-png,image/gif,image/jpeg"
          id="inputPhotoPost"
          onChange={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          type="file"
        />
        <button
          className="postButton btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="submit"
        >
          Post
        </button>
      </div>
      <br />
    </div>
    
  </div>
  <div
    className="displayError"
  >
    <p>
      Looks like our server is not responding.
    </p>
    <p>
      Please try again.
    </p>
  </div>
</div>
`;

exports[`Navbar rendered right 1`] = `
<div>
  <div
    className="NavBar"
  >
    <div
      className="title"
      onClick={[Function]}
    >
      this.jobs
    </div>
    <div
      className="SearchBar"
    >
      <div
        className="searchBarDisplay"
      >
        <input
          className="searchInput"
          id="searchInput"
          onChange={[Function]}
          onKeyPress={[Function]}
          placeholder="Search"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="iconsHolder"
    >
      <a
        className="linkDisplay home "
        href="/home"
        onClick={[Function]}
      >
        <div
          className="iconsDisplay"
        >
          <img
            alt="Home"
            className="iconsImages "
            src="house_white_1.png"
          />
          <p
            className="iconLabel "
          >
            Home
          </p>
        </div>
      </a>
      <a
        className="linkDisplay connections "
        href="/connections"
        onClick={[Function]}
      >
        <div
          className="iconsDisplay"
        >
          <img
            alt="Home"
            className="iconsImages"
            src="people_white_1.png"
          />
          <p
            className="iconLabel"
          >
            Connections
          </p>
        </div>
      </a>
      <a
        className="linkDisplay jobs"
        href="/jobs"
        onClick={[Function]}
      >
        <div
          className="iconsDisplay"
        >
          <img
            alt="Home"
            className="iconsImages"
            src="work_white_1.png"
          />
          <p
            className="iconLabel"
          >
            Jobs
          </p>
        </div>
      </a>
      <a
        className="linkDisplay settings"
        href="/settings/profile/null"
        onClick={[Function]}
      >
        <div
          className="iconsDisplay"
        >
          <img
            alt="Home"
            className="iconsImages"
            src="settings_white_1.png"
          />
          <p
            className="iconLabel"
          >
            Settings
          </p>
        </div>
      </a>
      <a
        className="linkDisplay logout"
        href="/"
        onClick={[Function]}
      >
        <div
          className="iconsDisplay"
        >
          <img
            alt="Home"
            className="iconsImages"
            src="logout_white_1.png"
          />
          <p
            className="iconLabel"
          >
            Logout
          </p>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`PostBox rendered right 1`] = `
<div
  className="PostBox container"
>
  <div
    className="box "
  >
    <h1
      className="titleToHover"
    >
      Create a Post!
    </h1>
    <div>
      <input
        className="textBox"
        onChange={[Function]}
        placeholder="What's on your mind?"
        type="text"
      />
    </div>
    <div
      className="buttons25"
    >
      <div
        className="dropdown"
      >
        <select
          className="dropbtn"
          onChange={[Function]}
        >
          <option
            id="SelectTag"
            value="1"
          >
            Select Tag
          </option>
          <option
            id="JobRecruitment"
            value="Job-Recruitment"
          >
            Job-Recruitment
          </option>
          <option
            id="KnowledgeSharing"
            value="Knowledge Sharing"
          >
            Knowledge Sharing
          </option>
          <option
            id="Inspiration"
            value="Inspiration"
          >
            Inspiration
          </option>
          <option
            id="Others"
            value="Others"
          >
            Others
          </option>
        </select>
      </div>
      <button
        className="sc-bdvvtL hvLuUM"
        onClick={[Function]}
      >
        <img
          alt=""
          className="images"
          src="camera-outline.svg"
        />
      </button>
      <input
        accept="image/x-png,image/gif,image/jpeg"
        id="inputPhotoPost"
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
      <button
        className="postButton btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="submit"
      >
        Post
      </button>
    </div>
    <br />
  </div>
  
</div>
`;

exports[`PostCard rendered right 1`] = `
<div
  className="displayError"
>
  <p>
    Looks like our server is not responding.
  </p>
  <p>
    Please try again.
  </p>
</div>
`;
